docs: 실증 노트 A~H 품질 개선 — 실측 로그 추가 + 수치 오류 수정 + 재현 명령
실측 원본 출력 추가 (전 실험):
  A: jcmd NMT 실제 출력, HeapUsageProbe 측정값
  B: PoolStarvation 전체 결과 테이블
  C: PinningProbe JDK 21 / JDK 25 비교 출력
  D: JniSleepProbe JDK 21 / JDK 25 비교 출력
  E: CpuBoundProbe 전체 결과 테이블
  F: CarrierTuningProbe ladder 출력
  G: ContinuationDepthProbe depth × heap 테이블
  H: ThreadLocalCostProbe 전체 매트릭스 + OOM 출력

수치 오류 수정:
  A: 캐리어 스레드 수 혼용 (17개 vs NMT #36-#23=13개) 명확화
  B: 이론 평균 대기 790ms가 p50이 아닌 p평균임 명시
  E: threads=96 8ms 차이를 단정 결론 대신 노이즈 가능성 주석 추가
  F: recovery 실측 > 이론 원인(스케줄링 오버헤드) 설명 추가
  G: depth 50 증가율 '+15%'를 '실제 depth 10보다 낮음(JIT 효과)' 표기로 수정
     ~40B/frame 공식이 구간별로 다름(22~40B) 명시

재현 명령 추가: A, B, C, D, E, F, G (H는 기존에 있었음)

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>